kube/services/netpolicy/networkpolicy_revproxy_templ.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-revproxy
spec:
  podSelector:
    matchLabels:
      app: revproxy
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: revproxy
      - podSelector:
          matchLabels:
             app: portal
      - ipBlock:
           cidr: 0.0.0.0/0
      ports:
         - port: 80
         - port: 443
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: revproxy
      - podSelector:
          matchLabels:
             app: indexd
      - podSelector:
          matchLabels:
             app: peregrine
      - podSelector:
          matchLabels:
             app: sheepdog
      - podSelector:
          matchLabels:
             app: portal
      - podSelector:
          matchLabels:
             app: fence
      - podSelector:
          matchLabels:
             app: pidgin
      - ipBlock:
           cidr: GEN3_CLOUDPROXY_CIDR
      - ipBlock: # cloudwatch-logs and other AWS services
           cidr: 54.224.0.0/12
      - ipBlock: # S3 us-east-1
           cidr: 52.92.16.0/20
  policyTypes:
   - Ingress
   - Egress
